# llm-sdk

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  eslint.config.js  go.work  go.work.sum  package-lock.json  package.json  prompt-external.md  tsconfig.json
.github/workflows/: ci.yml  go.yml  node.yml  publish-packages.yml  release.yml  rust.yml
agent-go/: README.md  agent.go  agent_test.go  configuration_test.go  edge_cases_test.go  errors.go  go.mod  go.sum  helpers.go  instruction.go  lifecycle_failures_test.go  opentelemetry.go  params.go  run.go  run_test.go  tool.go  tool_test.go  toolkit.go  types.go  types_test.go
agent-go/examples/: get_model.go
agent-go/mcp/: content.go  content_test.go  initialization_test.go  toolkit.go  toolkit_test.go  transport.go  transport_test.go  types.go  types_test.go
agent-js/: README.md  package.json  tsconfig.build.json  tsconfig.json
agent-js/examples/: agent.ts  agents-delegation.ts  ai-sdk-ui.ts  artifacts.ts  assistant.ts  cancellation.ts  get-model.ts  instructions.ts  mcp.ts  memory.ts  planner-executor.ts  require-approval.ts  server.ts  structured-output.ts  toolkits.ts  tools.ts  tracing.ts
agent-js/src/: agent.test.ts  agent.ts  configuration.test.ts  edge-cases.test.ts  errors.ts  index.ts  instruction.ts  lifecycle-failures.test.ts  opentelemetry.ts  params.ts  run.test.ts  run.ts  tool.test.ts  tool.ts  toolkit.ts  types.ts  utils.test.ts  utils.ts
agent-rust/: Cargo.toml  README.md
agent-rust/examples/: agent.rs  agents-delegation.rs  ai-sdk-ui.rs  artifacts.rs  assistant.rs  cancellation.rs  instructions.rs  mcp.rs  memory.rs  planner-executor.rs  require-approval.rs  structured-output.rs  toolkits.rs  tools.rs  tracing.rs
agent-rust/examples/common/: mod.rs
agent-rust/examples/server/: agent.rs  artifacts_tools.rs  context.rs  finance_tools.rs  get_model.rs  information_tools.rs  main.rs  weather_tools.rs
agent-rust/src/: agent.rs  errors.rs  instruction.rs  lib.rs  mcp.rs  opentelemetry.rs  params.rs  run.rs  tool.rs  toolkit.rs  types.rs
agent-rust/src/mcp/: content.rs  toolkit.rs  types.rs
agent-rust/tests/: agent_tests.rs  configuration_tests.rs  edge_cases_tests.rs  integration_tests.rs  lifecycle_failures_tests.rs  mcp_initialization_tests.rs  mcp_tests.rs  run_tests.rs  tool_tests.rs  types_tests.rs
deploy-example-server/: .dockerignore  Dockerfile  README.md  docker-compose.yml
docs/: README.md  astro.config.mjs  models.json  package.json
example-server/: Dockerfile  README.md  docker-compose.yml
examples/next-ai-sdk-ui/: .gitignore  README.md  package.json  tsconfig.json
go/: README.md  codegen.yaml  go.mod  schemas.go
javascript/: README.md  eslint.config.js  generate.js  openapi-ts.config.ts  package.json  schema.json  tsconfig.json
javascript/examples/: generate-audio-multiturn.ts  generate-audio.ts  generate-text.ts  model.ts  stream-audio.ts  stream-text.ts  stream-tool-use.ts  tool-use.ts
javascript/src/: index.ts  models.ts
javascript/test/: anthropic.test.ts  cohere.test.ts  google.test.ts  mistral.test.ts  openai.test.ts  test-language-model.ts
models/: models.json  models.schema.json
patches/: json-schema-to-typescript+15.0.3.patch  json-schema-to-typescript+15.0.4.patch
schema/: agent.json  agent.ts  eslint.config.js  openai-chat.ts  openai.json  schema.json  sdk.json  sdk.ts  tsconfig.json
schema/providers/: anthropic.json  anthropic.override.json  cohere.json  google.json  google.override.json  google.ts  mistral.json  openai-chat.json  openai-chat.override.json  openai-chat.ts  openai-responses.ts  openai.json  openai.override.json
schemas/: openapi.json
scripts/: generate-provider-code.ts  get-provider-schemas.ts  schema-to-code.ts
sdk-go/: README.md  accumulator.go  accumulator_test.go  audioutils.go  documentutils.go  errors.go  go.mod  go.sum  helpers.go  languagemodel.go  opentelemetry.go  sourcepartutils.go  streamresponse.go  streamutils.go  testing.go  testing_test.go  tool_part_test.go  types.go  types_tool_test.go  usageutils.go
sdk-js/: README.md  eslint.config.js  package.json  schema.json  tsconfig.json
sdk-rust/: Cargo.toml  LICENSE  README.md
sdk-rust/examples/: describe-image.rs  generate-audio.rs  generate-image.rs  generate-reasoning.rs  generate-text.rs  generate_citations.rs  stream-audio.rs  stream-reasoning.rs  stream-text.rs  stream-web-search.rs  stream_citations.rs  structured-output.rs  summarize-audio.rs  tool-use-image.rs  tool-use.rs  web-search.rs
sdk-rust/examples/common/: mod.rs
sdk-rust/src/: accumulator.rs  audio_part_utils.rs  audio_utils.rs  boxed_stream.rs  client_utils.rs  document_utils.rs  errors.rs  ext.rs  id_utils.rs  language_model.rs  lib.rs  llm_sdk_test.rs  openai.rs  opentelemetry.rs  registry.rs  source_part_utils.rs  stream_utils.rs  testing.rs  tool_result_utils.rs  types.rs  types_ext.rs  usage.rs  usage_ext.rs  usage_utils.rs  utils.rs
sdk-rust/src/anthropic/: api.rs  mod.rs  model.rs
sdk-rust/src/google/: api.rs  mod.rs  model.rs
sdk-rust/src/llm_sdk_test/: model.rs
sdk-rust/src/openai/: api.rs  chat_api.rs  chat_model.rs  mod.rs  model.rs  openai.rs  openai_api.rs  options.rs  responses_api.rs  responses_api_serde.rs  types.rs
sdk-rust/src/test_common/: assert.rs  mod.rs
sdk-rust/src/test_utils/: assert.rs  cases.rs
sdk-rust/src/utils/: audio_utils.rs
sdk-rust/tests/: accumulator_tests.rs  anthropic_test.rs  core_tests.rs  google_test.rs  llm_sdk_test_test.rs  openai_chat_test.rs  openai_test.rs  openai_transport_tests.rs  provider_tests.rs  reasoning_assertion_test.rs  testing_test.rs  tool_part_tests.rs
sdk-rust/tests/common/: assert.rs  cases.rs  mod.rs  transports.rs
sdk-rust/tests/language_model_tests/: mod.rs
sdk-tests/: TESTING.md  cli.mjs  protocol.d.mts  protocol.mjs  protocol.ts  tests.json  transport-server.mjs  transports.json
spec/: README.md
website/: .gitignore  README.md  astro.config.mjs  models.json  package.json  wrangler.jsonc
website-server/: package.json  tsconfig.json  worker-configuration.d.ts  wrangler.json
(+330 files in other folders)
