[package]
description = "The LLM SDK enables the development of applications that can interact with different language models through a unified interface."
edition = "2021"
homepage = "https://llm-sdk.hoangvvo.com/"
keywords = [
  "llm",
  "language model",
  "agent",
  "ai",
  "openai",
  "anthropic",
  "cohere",
  "mistral",
]
license = "MIT"
name = "llm-sdk"
readme = "README.md"
repository = "https://github.com/hoangvvo/llm-sdk"
version = "0.1.0"

[lib]
name = "llm_sdk"

[lints.clippy]
pedantic = "warn"
use_self = "warn"

[features]
utoipa = ["dep:utoipa"]

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.86"
base64 = "0.22.1"
eventsource-stream = "0.2.3"
futures = "0.3.31"
opentelemetry = "0.27"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json", "gzip", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.11"
utoipa = { version = "5", optional = true }
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-futures = { version = "0.2", features = ["std", "futures-03"] }

[dev-dependencies]
dotenvy = { version = "0.15.7" }
paste = "1.0.15"
regex = "1.11.1"
rodio = "0.17"
seq-macro = "0.3"
tokio = { version = "1.42.0", features = ["full"] }
viuer = "0.7"
