[package]
description = "A Rust library that enables the development of applications that can interact with different language models through a unified interface."
edition = "2021"
homepage = "https://llm-sdk.hoangvvo.com/"
include = [
  "src/**/*",
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "examples/**/*",
  "tests/**/*",
]
keywords = ["llm", "language-model", "agent", "ai", "openai"]
license = "MIT"
name = "llm-sdk-rs"
readme = "README.md"
repository = "https://github.com/hoangvvo/llm-sdk"
version = "0.2.0"

[lib]
name = "llm_sdk"

[lints.clippy]
pedantic = "warn"
use_self = "warn"

[features]
utoipa = ["dep:utoipa"]

[dependencies]
async-stream = "0.3.6"
base64 = "0.22"
eventsource-stream = "0.2"
futures = "0.3"
opentelemetry = "0.30"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["std", "futures-03"] }
tracing-opentelemetry = "0.31"
utoipa = { version = "5", optional = true }

[dev-dependencies]
dotenvy = { version = "0.15.7" }
paste = "1.0.15"
regex = "1.11.1"
tokio = { version = "1.42.0", features = ["full"] }
