[package]
autotests = false
description = "A Rust library that enables the development of applications that can interact with different language models through a unified interface."
edition = "2021"
homepage = "https://llm-sdk.hoangvvo.com/"
include = [
  "src/**/*",
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "examples/**/*",
  "tests/**/*",
]
keywords = ["llm", "language-model", "agent", "ai", "openai"]
license = "MIT"
name = "llm-sdk-rs"
readme = "README.md"
repository = "https://github.com/hoangvvo/llm-sdk"
version = "0.3.0"

[lib]
name = "llm_sdk"
test = false

[lints.clippy]
pedantic = "warn"
use_self = "warn"

[features]
default = ["tls-ring"]
anthropic = []
examples = []
google = []
openai = []
tls-aws-lc = ["rustls/aws-lc-rs"]
tls-ring = ["rustls/ring"]
utoipa = ["dep:utoipa"]

[dependencies]
async-stream = "0.3.6"
base64 = "0.22"
eventsource-stream = "0.2"
futures = "0.3"
opentelemetry = { version = "0.32", default-features = false, features = [
  "trace",
] }
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = [
  "gzip",
  "json",
  "rustls-no-provider",
  "stream",
] }
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-futures = { version = "0.2", features = [
  "std",
  "futures-03",
] }
tracing-opentelemetry = { version = "0.33", default-features = false }
utoipa = { version = "5", optional = true }

[dev-dependencies]
dotenvy = { version = "0.15.7" }
tokio = { version = "1.50.0", features = ["full"] }

[[test]]
name = "core_tests"
path = "tests/core_tests.rs"

[[test]]
name = "provider_tests"
path = "tests/provider_tests.rs"

[[example]]
name = "describe-image"
required-features = ["examples"]

[[example]]
name = "generate-audio"
required-features = ["examples"]

[[example]]
name = "generate-image"
required-features = ["examples"]

[[example]]
name = "generate-reasoning"
required-features = ["examples"]

[[example]]
name = "generate-text"
required-features = ["examples"]

[[example]]
name = "generate_citations"
required-features = ["examples"]

[[example]]
name = "stream-audio"
required-features = ["examples"]

[[example]]
name = "stream-reasoning"
required-features = ["examples"]

[[example]]
name = "stream-text"
required-features = ["examples"]

[[example]]
name = "stream-web-search"
required-features = ["examples"]

[[example]]
name = "stream_citations"
required-features = ["examples"]

[[example]]
name = "structured-output"
required-features = ["examples"]

[[example]]
name = "summarize-audio"
required-features = ["examples"]

[[example]]
name = "tool-use"
required-features = ["examples"]

[[example]]
name = "tool-use-image"
required-features = ["examples"]

[[example]]
name = "web-search"
required-features = ["examples"]
